fixed about page on mobile

--- a/app/css/about.css
+++ b/app/css/about.css
@@ -13,6 +13,6 @@ body {
     background-color: white;
 }
 
-.content-box h2 {
+.content-box h3 {
     text-decoration: underline;
 }
